--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+
+:root {
+    --font: 'Secular One', sans-serif;
+}
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 620px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  font-family: var(--font);
+  background-color: #202020;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+
+.contenedor-calculadora{
+  width: 400px;
+  height: 600px;
+  background: #7e7e7e ;
+  padding: 15px;
+  border-radius: 20px;
+  border: solid #faa72b;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fila{
+  margin: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
